add：完成视频管理页面基本功能开发
完成以下功能开发：
1. 新增扫描视频/搜索视频/获取视频缩略图接口
2. 原有获取配置/修改配置/同步接口适配视频管理
3. 前端页面适配
