# docs/openapi.yaml
@@ -554,6 +554,99 @@ paths:
         '200':
           content:
             image/*: {}
+  /video/scan:
+    get:
+      operationId: ScanVideo
+      summary: 扫描视频目录，构建视频元数据
+      description: 根据文件存储目录初始化服务数据
+      responses:
+        '200':
+          description: 扫描成功
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ScanVideoResponse'
+  /video/search:
+    get:
+      operationId: SearchVideo
+      summary: 搜索视频
+      description: 根据视频元数据搜索视频
+      parameters:
+        # 分页参数
+        - name: page
+          in: query
+          schema:
+            type: integer
+            default: 1
+            description: 页码，默认第一页
+          required: false
+        - name: page_size
+          in: query
+          schema:
+            type: integer
+            default: 10
+            description: 每页数量，默认10条
+          required: false
+        # 排序参数
+        - name: sort_by
+          in: query
+          schema:
+            type: string
+            enum: [shot_at, file_size]
+            default: shot_at
+            description: 排序字段，默认按拍摄时间排序
+          required: false
+        - name: sort_order
+          in: query
+          schema:
+            type: string
+            enum: [asc, desc]
+            default: asc
+            description: 排序顺序，默认升序
+          required: false          
+      responses:
+        '200':
+          description: 搜索成功
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SearchVideoResponse'
+  /video/source:
+    get:
+      x-codegen-skip: true
+      operationId: GetVideoSource
+      summary: 获取视频
+      description: 获取视频
+      parameters:
+        - name: id
+          in: query
+          schema:
+            type: integer
+            default: 1
+            description: 视频ID
+          required: true
+      responses:
+        '200':
+          content:
+            video/*: {}
+  /video/thumb:
+    get:
+      x-codegen-skip: true
+      operationId: GetVideoThumb
+      summary: 获取视频缩略图
+      description: 获取视频缩略图
+      parameters:
+        - name: id
+          in: query
+          schema:
+            type: integer
+            default: 1
+            description: 视频ID
+          required: true
+      responses:
+        '200':
+          content:
+            image/*: {}
 
 components:
   schemas:
@@ -581,6 +674,10 @@ components:
           type: string
           example: /c/users/default/Picture
           description: 图片目录
+        video_dir:
+          type: string
+          example: /c/users/default/Video
+          description: 视频目录
     SetConfigRequest:
       type: object
       $ref: '#/components/schemas/Config'
@@ -916,9 +1013,8 @@ components:
           description: FTP目录路径
         compare_type:
           type: string
-          enum: [audio, image]
+          enum: [audio, image, video]
           description: 对比类型
-
     SyncCompareResponse:
       type: object
       required: [code, message]
@@ -970,7 +1066,7 @@ components:
           description: FTP目录路径
         compare_type:
           type: string
-          enum: [audio, image]
+          enum: [audio, image, video]
           description: 同步类型
         to_download:
           type: array
@@ -1077,5 +1173,92 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/ImageItem'
+            pagination:
+              $ref: '#/components/schemas/Pagination'
+    VideoItem:
+      type: object
+      properties:
+        id:
+          type: integer
+          description: 视频ID
+          example: 1
+        create_time:
+          type: string
+          description: 创建时间
+        update_time:
+          type: string
+          description: 更新时间
+        delete_time:
+          type: string
+          description: 删除时间
+        file_path:
+          type: string
+          description: 文件路径
+          example: /path/to/image.jpg
+        file_ext:
+          type: string
+          description: 文件格式
+          example: jpg
+        file_size:
+          type: integer
+          description: 文件字节大小
+          example: 1024
+        file_md5:
+          type: string
+          description: 文件哈希值
+          example: 1234567890abcdef1234567890abcdef
+        width:
+          type: integer
+          description: 宽度（像素）
+          example: 1024
+        height:
+          type: integer
+          description: 高度（像素）
+          example: 768
+        shot_at:
+          type: string
+          description: 拍摄时间
+          example: 2023-01-01T12:00:00Z
+        orientation:
+          type: integer
+          description: 朝向（1-8，对应EXIF标准，用于自动转正）
+          example: 1
+        latitude:
+          type: number
+          format: double
+          description: 纬度
+          example: 39.9042
+        longitude:
+          type: number
+          format: double
+          description: 经度
+          example: 116.4074
+    ScanVideoResponse:
+      type: object
+      required: [code, message]
+      properties:
+        code:
+          type: integer
+          example: 0
+        message:
+          type: string
+          example: success
+    SearchVideoResponse:
+      type: object
+      required: [code, message, data]
+      properties:
+        code:
+          type: integer
+          example: 0
+        message:
+          type: string
+          example: success
+        data:
+          type: object
+          properties:
+            video_list:
+              type: array
+              items:
+                $ref: '#/components/schemas/VideoItem'
             pagination:
               $ref: '#/components/schemas/Pagination'
