# internal/handler/scanVideo.handler.go
@@ -1,0 +1,23 @@
+// Code generated by GinX. DO NOT EDIT.
+package handler
+
+import (
+	"net/http"
+
+	"Rivus/internal/logic"
+
+	"github.com/gin-gonic/gin"
+)
+
+// ScanVideo 扫描视频目录，构建视频元数据
+func (h *Handler) ScanVideo(c *gin.Context) {
+	l := logic.NewScanVideoLogic(h.Logic)
+
+	resp, err := l.ScanVideo()
+
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+	c.JSON(http.StatusOK, resp)
+}
