# internal/handler/searchVideo.handler.go
@@ -1,0 +1,24 @@
+// Code generated by GinX. DO NOT EDIT.
+package handler
+
+import (
+	"net/http"
+
+	generated "Rivus/internal/generated"
+	"Rivus/internal/logic"
+
+	"github.com/gin-gonic/gin"
+)
+
+// SearchVideo 搜索视频
+func (h *Handler) SearchVideo(c *gin.Context, params generated.SearchVideoParams) {
+	l := logic.NewSearchVideoLogic(h.Logic)
+
+	resp, err := l.SearchVideo(params)
+
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+	c.JSON(http.StatusOK, resp)
+}
